--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
+      {{ form.csrf_token }}
       <h3 class="form-heading">List a new artist</h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -31,28 +32,29 @@
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
+    
+      <div class="form-group">
+        <label for="image_link">Image Link</label>
+        {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
+
+      <div class="form-group">
+          <label for="website_link">Website Link</label>
+          {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
-      
+
         <div class="form-group">
-          <label for="image_link">Image Link</label>
-          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            <label for="seeking_venue">Looking for Venues</label>
+            {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
         </div>
 
         <div class="form-group">
-            <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-          </div>
+            <label for="seeking_description">Seeking Description</label>
+            {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+        </div>
 
-          <div class="form-group">
-              <label for="seeking_venue">Looking for Venues</label>
-              {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
-          </div>
-
-          <div class="form-group">
-              <label for="seeking_description">Seeking Description</label>
-              {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
-            </div>
-      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
+        <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
