--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -75,7 +75,13 @@
 	</div>
 </section>
 
-<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<div class="btn-group">
+	<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+
+	<form class="form" method="POST" action="/venues/{{ venue.id }}/delete">
+		<input type="submit" value="Delete Venue" class="btn btn-warning btn-lg btn-block">
+	</form>
+</div>
 
 {% endblock %}
 
